applications/argo-rollouts/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  annotations:
    addons_domain: placeholder-domain
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      namespace: traefik
  hostnames:
    - argo-rollouts.placeholder-domain
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argo-rollouts-dashboard
          port: 3100
